fixed location page, made footer align left
Nice.

--- a/css/style.css
+++ b/css/style.css
@@ -68,7 +68,8 @@ h6{
 }
 
 .heavy {
-	font-weight:700;
+	font-family:Rokkitt;
+	font-weight:400;
 }
 
 
@@ -154,6 +155,11 @@ h6{
 
 
 /* Footer! */
+.footer .col-md-4 {
+	padding-left:0;
+}
+
+
 .footer{
 	background-color: #333333;
 	padding-top:4rem;
@@ -237,5 +243,6 @@ h6{
 
 .container {
 	max-width:1000px;
+	padding-left:0;
 }
 }
